--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   <div class="app-name">Calendar</div>
               </a>
       
-              <a class="app-card" data-app-id="leave-calendar" href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank" onclick="trackRecentlyUsed(event)">
+              <a class="app-card" data-app-id="leave-calendar" href="https://docs.google.com/spreadsheets/d/1RjJLFK478g-haoGQa6314YdznhhEfdWnP3rzXql_GKM/edit?gid=888205070#gid=888205070" target="_blank" onclick="trackRecentlyUsed(event)">
                   <div class="app-icon">🏖</div>
                   <div class="app-name">Leave Calendar</div>
               </a>
