--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Techi Tubbie Headquarters </title>
+  <title>Techi Tubbies Headquarters </title>
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -30,7 +30,7 @@
     <!-- HEADER -->
     <header>
       <div class="header-content">
-        <h1>Techi Tubbie Headquarters</h1>
+        <h1>Techi Tubbies Headquarters</h1>
         <input 
           type="text" 
           id="searchInput" 
