--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Techi Tubbies Headquarters </title>
+  <title>Techi Tubbies Headquarters </title
+
+  <!-- Favicon Links -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
