--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>© 2025 Techie Tubbie. All rights reserved.</p>
+      <p>© 2025 Techie Tubbies. All rights reserved.</p>
     </footer>
   </div>
 
