--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                   <div class="app-name">Leave Calendar</div>
               </a>
       
-              <a class="app-card" data-app-id="team-schedule" href="https://docs.google.com/spreadsheets/d/1eNtVO3q0Hh99HpaptCpbPjNyMlnNtaRPpzn-tSSCyNY/edit?pli=1&gid=537241561#gid=537241561" target="_blank" onclick="trackRecentlyUsed(event)">
+              <a class="app-card" data-app-id="team-schedule" href="https://docs.google.com/spreadsheets/d/1eNtVO3q0Hh99HpaptCpbPjNyMInNtaRPpzn-tSSCyNY/edit?usp=sharing" target="_blank" onclick="trackRecentlyUsed(event)">
                   <div class="app-icon">📊</div>
                   <div class="app-name">Team Schedule</div>
               </a>
