--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   target="_blank"
                   onclick="trackRecentlyUsed(event)"
                 >
-                  <div class="icon-26"></div>
+                  <i class="icon-26"></i>
                   <div class="app-name">ChatGPT</div>
                 </a>
 
