--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
                   <div class="app-icon">🔑</div>
                   <div class="app-name">Change Password For Bradley User</div>
                 </a>
+                <a
+                  class="app-card"
+                  data-app-id="SOP"
+                  href="https://docs.google.com/document/d/1XO_Y_BAfDBz-lRpvD9h0cAztKfh6jO3w7_kFKC927TA/edit?tab=t.oti8gza9ldhn"
+                  target="_blank"
+                  onclick="trackRecentlyUsed(event)"
+                >
+                  <div class="app-icon">🔑</div>
+                  <div class="app-name">Standard Operating Procedure</div>
+                </a>
               </div>
             </section>
             <!-- TOOLS -->
