--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   target="_blank"
                   onclick="trackRecentlyUsed(event)"
                 >
-                  <div class="app-icon">🔑</div>
+                  <div class="app-icon">📑</div>
                   <div class="app-name">Standard Operating Procedure</div>
                 </a>
               </div>
