--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a
                   class="app-card"
                   data-app-id="leave-calendar"
-                  href="https://calendar.google.com/calendar/u/0/r?pli=1"
+                  href="https://docs.google.com/spreadsheets/d/1RjJLFK478g-haoGQa6314YdznhhEfdWnP3rzXql_GKM/edit?gid=2065537752#gid=2065537752"
                   target="_blank"
                   onclick="trackRecentlyUsed(event)"
                 >
