--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 
       <!-- FOOTER -->
       <footer>
-        <p>Built with 💻 and ☕ by AJ & Ntando — proud members of the Techie Tubbies crew. © 2025 (AJ & Ntando). All rights reserved.</p>
+        <p>Built with 💻 and ☕ by AJ & Ntando — proud members of the Techie Tubbies crew. © 2025 AJ & Ntando. All rights reserved.</p>
       </footer>
     </div>
 
