--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
     <a
       class="app-card"
       data-app-id="submit-task"
-      href="https://yourusername.github.io/Techie-Tubbies-HQ/submit-task.html"  <!-- 🔁 Replace with real task form URL -->
+      href="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
       target="_blank"
       onclick="trackRecentlyUsed(event)"
     >
-      <div class="app-icon">📝</div>
+      <div class="app-icon">
+        <img src="https://img.icons8.com/ios-filled/50/000000/task.png" alt="Task Icon" style="width:32px; height:32px;">
+      </div>
       <div class="app-name">Create Team Task</div>
     </a>
   </div>
