--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 <nav class="side-nav">
   <ul>
     <li onclick="filterByCategory('all')">All</li>
-    <li onclick="filterByCategory('submit-task')">Submit Task</li> <!-- ✅ Added -->
     <li onclick="filterByCategory('must-haves')">Must-Haves</li>
     <li onclick="filterByCategory('Support Tools')">Support Tools</li>
     <li onclick="filterByCategory('boundless-toolkit')">Boundless Toolkit</li>
     <li onclick="filterByCategory('lms')">LMS & School Portal</li>
     <li onclick="filterByCategory('work')">Work</li>
     <li onclick="filterByCategory('student-support')">Student Support Page</li>
+        <li onclick="filterByCategory('submit-task')">Submit Task</li>
   </ul>
 </nav>
 
