--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <li onclick="filterByCategory('lms')">LMS & School Portal</li>
     <li onclick="filterByCategory('work')">Work</li>
     <li onclick="filterByCategory('student-support')">Student Support Page</li>
-    <li onclick="filterByCategory('submit-task')">Submit Task</li>
+        <li onclick="filterByCategory('submit-task')">Submit Task</li>
   </ul>
 </nav>
 
@@ -75,6 +75,23 @@
           -->
 
             <!-- SUBMIT TASK SECTION -->
+<section class="app-section" id="submit-task">
+  <h2>Submit a Task</h2>
+  <div class="app-grid">
+    <a
+      class="app-card"
+      data-app-id="submit-task"
+      href="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
+      target="_blank"
+      onclick="trackRecentlyUsed(event)"
+    >
+      <div class="app-icon">
+        <img src="https://img.icons8.com/ios-filled/50/000000/task.png" alt="Task Icon" style="width:32px; height:32px;">
+      </div>
+      <div class="app-name">Create Team Task</div>
+    </a>
+  </div>
+</section>
 
             <!-- USEFUL LINKS -->
             <section class="app-section" id="must-haves">
