--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </section>
           -->
 
-            <!-- SUBMIT TASK SECTION -->
+<!-- SUBMIT TASK SECTION 
 <section class="app-section" id="submit-task">
   <h2>Submit a Task</h2>
   <div class="app-grid">
@@ -92,6 +92,9 @@
     </a>
   </div>
 </section>
+
+            -->
+            
 
             <!-- USEFUL LINKS -->
             <section class="app-section" id="must-haves">
