--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
     </a>
   </div>
 </section>
-
-            -->
+-->
             
 
             <!-- USEFUL LINKS -->
@@ -900,6 +899,25 @@
                 </a>
               </div>
             </section>
+
+            <!-- SUBMIT TASK SECTION -->
+<section class="app-section" id="submit-task">
+  <h2>Submit a Task</h2>
+  <div class="app-grid">
+    <a
+      class="app-card"
+      data-app-id="submit-task"
+      href="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
+      target="_blank"
+      onclick="trackRecentlyUsed(event)"
+    >
+      <div class="app-icon">
+        <img src="https://img.icons8.com/ios-filled/50/000000/task.png" alt="Task Icon" style="width:32px; height:32px;">
+      </div>
+      <div class="app-name">Create Team Task</div>
+    </a>
+  </div>
+</section>
           </main>
         </div>
       </div>
