--- a/index.html
+++ b/index.html
@@ -904,18 +904,14 @@
 <section class="app-section" id="submit-task">
   <h2>Submit a Task</h2>
   <div class="app-grid">
-    <a
-      class="app-card"
-      data-app-id="submit-task"
-      href="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
-      target="_blank"
-      onclick="trackRecentlyUsed(event)"
-    >
-      <div class="app-icon">
-        <img src="https://img.icons8.com/ios-filled/50/000000/task.png" alt="Task Icon" style="width:32px; height:32px;">
-      </div>
-      <div class="app-name">Create Team Task</div>
-    </a>
+    <div class="app-card" data-app-id="submit-task" style="width: 100%;">
+  <div class="app-name" style="margin-bottom: 10px;">Create Team Task</div>
+  <iframe 
+    src="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html" 
+    style="width: 100%; height: 600px; border: 1px solid #ccc; border-radius: 8px;"
+    title="Submit Task Form"
+  ></iframe>
+</div>
   </div>
 </section>
           </main>
