--- a/index.html
+++ b/index.html
@@ -903,16 +903,14 @@
             <!-- SUBMIT TASK SECTION -->
 <section class="app-section" id="submit-task">
   <h2>Submit a Task</h2>
-  <div class="app-grid">
-    <div class="app-card" data-app-id="submit-task" style="width: 100%;">
+  <div class="app-card" data-app-id="submit-task" style="width: 100%;">
   <div class="app-name" style="margin-bottom: 10px;">Create Team Task</div>
   <iframe 
     src="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html" 
-    style="width: 100%; height: 600px; border: 1px solid #ccc; border-radius: 8px;"
+    style="width: 100%; min-width: 700px; height: 720px; border: none; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
     title="Submit Task Form"
   ></iframe>
 </div>
-  </div>
 </section>
           </main>
         </div>
