--- a/index.html
+++ b/index.html
@@ -901,17 +901,23 @@
             </section>
 
             <!-- SUBMIT TASK SECTION -->
-<section class="app-section" id="submit-task">
-  <h2>Submit a Task</h2>
-  <div class="app-card" data-app-id="submit-task" style="width: 100%;">
-  <div class="app-name" style="margin-bottom: 10px;">Create Team Task</div>
-  <iframe 
-    src="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html" 
-    style="width: 100%; min-width: 700px; height: 720px; border: none; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
-    title="Submit Task Form"
-  ></iframe>
-</div>
+<section class="app-section" id="submit-task" style="padding: 0; margin: 0;">
+  <div style="width: 100%; height: calc(100vh - 60px); margin: 0; padding: 0;">
+    <iframe
+      src="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
+      title="Submit Task"
+      style="
+        width: 100%;
+        height: 100%;
+        border: none;
+        padding: 0;
+        margin: 0;
+        display: block;
+      "
+    ></iframe>
+  </div>
 </section>
+
           </main>
         </div>
       </div>
