--- a/submit-task.html
+++ b/submit-task.html
@@ -31,7 +31,7 @@
         }
 
         label {
-            display: block;
+            display: block;f
             font-weight: 600;
             margin-bottom: 8px;
             color: #34495e;
@@ -132,7 +132,7 @@
             <!-- Assigned Agent -->
             <label for="00NQj00000Rgxc1">Assigned Team Member</label>
             <select name="00NQj00000Rgxc1" id="00NQj00000Rgxc1" required>
-                <option value="">-- Select Agent --</option>
+                <option value="">-- Select Name --</option>
                 <option value="005Hs00000FHLr7IAH">AJ</option>
                 <option value="005Hs00000FI2ifIAD">Gugu</option>
                 <option value="005Hs00000FIEIIIA5">Chris</option>
