--- a/submit-task.html
+++ b/submit-task.html
@@ -106,7 +106,7 @@
 
             <!-- Task Description -->
             <label for="00NQj00000Rg5SNMAZ">Task Description</label>
-            <textarea id="00NQj00000Rg5SNMAZ" name="00NQj00000Rg5SNMAZ" rows="5"></textarea>
+            <textarea id="00NQj00000Rg5SNMAZ" name="00NQj00000Rg5SNMAZ" rows="5"style="height: 219px;"></textarea>
 
             <!-- Task Category -->
             <label for="00NQj00000RgCV4">Task Category</label>
