--- a/submit-task.html
+++ b/submit-task.html
@@ -111,14 +111,6 @@
                 <option value="005Qj00000Z5RQ1IAN">Hlela</option>
             </select>
 
-            <!-- Email -->
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" maxlength="80" required>
-
-            <!-- Task Title -->
-            <label for="00NQj00000RgEtR">Task Title</label>
-            <input id="00NQj00000RgEtR" name="00NQj00000RgEtR" type="text" maxlength="255" required>
-
             <!-- Task Category -->
             <label for="00NQj00000RgCV4">Task Category</label>
             <select id="00NQj00000RgCV4" name="00NQj00000RgCV4" required>
@@ -131,6 +123,14 @@
                 <option value="Team Support">Team Support</option>
                 <option value="Ad Hoc Task">Ad Hoc Task</option>
             </select>
+
+            <!-- Your Email Address -->
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" maxlength="80" required>
+
+            <!-- Task Title -->
+            <label for="00NQj00000RgEtR">Task Title</label>
+            <input id="00NQj00000RgEtR" name="00NQj00000RgEtR" type="text" maxlength="255" required>
 
             <!-- Task Description -->
             <label for="00NQj00000Rg5SNMAZ">Task Description</label>
