--- a/index.html
+++ b/index.html
@@ -50,18 +50,22 @@
       <!-- CONTENT WRAPPER: Nav on left, main area on right -->
       <div id="contentWrapper">
         <!-- SIDE NAVIGATION -->
-<nav class="side-nav">
-  <ul>
-    <li onclick="filterByCategory('all')">All</li>
-    <li onclick="filterByCategory('must-haves')">Must-Haves</li>
-    <li onclick="filterByCategory('Support Tools')">Support Tools</li>
-    <li onclick="filterByCategory('boundless-toolkit')">Boundless Toolkit</li>
-    <li onclick="filterByCategory('lms')">LMS & School Portal</li>
-    <li onclick="filterByCategory('work')">Work</li>
-    <li onclick="filterByCategory('student-support')">Student Support Page</li>
-        <li onclick="filterByCategory('submit-task')">Submit Task</li>
-  </ul>
-</nav>
+        <nav class="side-nav">
+          <ul>
+            <li onclick="filterByCategory('all')">All</li>
+            <!--<li onclick="filterByCategory('recently-used')">Recently Used</li>-->
+            <li onclick="filterByCategory('must-haves')">Must-Haves</li>
+            <li onclick="filterByCategory('Support Tools')">Support Tools</li>
+            <li onclick="filterByCategory('boundless-toolkit')">
+              Boundless Toolkit
+            </li>
+            <li onclick="filterByCategory('lms')">LMS & School Portal</li>
+            <li onclick="filterByCategory('work')">Work</li>
+            <li onclick="filterByCategory('student-support')">
+              Student Support Page
+            </li>
+          </ul>
+        </nav>
 
         <!-- MAIN AREA -->
         <div class="main-area">
@@ -73,27 +77,6 @@
             <div class="app-grid"></div>
           </section>
           -->
-
-<!-- SUBMIT TASK SECTION 
-<section class="app-section" id="submit-task">
-  <h2>Submit a Task</h2>
-  <div class="app-grid">
-    <a
-      class="app-card"
-      data-app-id="submit-task"
-      href="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
-      target="_blank"
-      onclick="trackRecentlyUsed(event)"
-    >
-      <div class="app-icon">
-        <img src="https://img.icons8.com/ios-filled/50/000000/task.png" alt="Task Icon" style="width:32px; height:32px;">
-      </div>
-      <div class="app-name">Create Team Task</div>
-    </a>
-  </div>
-</section>
--->
-            
 
             <!-- USEFUL LINKS -->
             <section class="app-section" id="must-haves">
@@ -899,25 +882,6 @@
                 </a>
               </div>
             </section>
-
-            <!-- SUBMIT TASK SECTION -->
-<section class="app-section" id="submit-task" style="padding: 0; margin: 0;">
-  <div style="width: 100%; height: calc(100vh - 60px); margin: 0; padding: 0;">
-    <iframe
-      src="https://boundlesssupport.github.io/Techie-Tubbies-HQ/submit-task.html"
-      title="Submit Task"
-      style="
-        width: 100%;
-        height: 100%;
-        border: none;
-        padding: 0;
-        margin: 0;
-        display: block;
-      "
-    ></iframe>
-  </div>
-</section>
-
           </main>
         </div>
       </div>
